<resources>
    <string name="app_name">goodyday</string>
    <string name="mission_title">구디</string>
    <string name="calendar_title">캘린더</string>
    <string name="my_page_title">마이페이지</string>
    <string name="goody_profile_name">춤추는구디</string>
    <string name="goody_profile_text">오늘의 낭만을 즐겨보세요!</string>

    <string name="text_today_is_goody">Today\'s goody</string>
    <string name="text_create_mission">직접 작성하기</string>

    <string name="sunday">일</string>
    <string name="monday">월</string>
    <string name="tuesday">화</string>
    <string name="wednesday">수</string>
    <string name="thursday">목</string>
    <string name="friday">금</string>
    <string name="saturday">토</string>

    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>

    <string name="option_edit">수정하기</string>
    <string name="option_delete">삭제하기</string>

    <string name="text_tutorial_slide_mission_card">마음에 드는 구디 카드를 찾아,\n오른쪽으로 넘겨보세요</string>
    <string name="text_tutorial_create_mission_card">마음에 쏙 드는 카드가 없다면,\n직접 구디카드를 작성해 보세요</string>
    <string name="text_tutorial_calendar">내 기록을 한눈에 확인할 수 있어요</string>

    <string name="text_network_error">인터넷 연결을 확인해 주세요</string>
    <string name="text_network_check_and_retry">네트워크 상태를 확인 후 다시 시도해 주세요</string>
    <string name="text_retry">다시 시도하기</string>

    <string name="goody_card_forms_title">나만의 작은 낭만이 있다면?</string>
    <string name="goody_card_forms_sub_title">구디데이에게 알려주세요</string>
    <string name="privacy_policy">개인정보 처리방침</string>
    <string name="terms_of_service">서비스 이용약관</string>
    <string name="logout">로그아웃</string>
    <string name="revoke">회원탈퇴</string>
    <string name="contact_us">문의하기</string>
    <string name="version_data">버전정보</string>

    <string name="goody_due_date_error_message">오늘 이미 작성한 구디가 있어요</string>
    <string name="goody_register_success_message">구디카드가 저장되었어요</string>
    <string name="goody_register_error_message">저장 실패</string>
    <string name="goody_delete_success_message">삭제 되었습니다.</string>
    <string name="goody_delete_error_message">삭제 실패</string>

    <string name="login_error_message">아이디, 비밀번호를 다시 확인해주세요.</string>

    <string name="login_title">오늘은 \‘굳이\' 어떤 일을 해볼까요?</string>
    <string name="kakao_btn_title">카카오로 시작하기</string>

    <string name="bookmark">북마크</string>
    <string name="mission_card">미션카드</string>
    <string name="level">난이도</string>

    <string name="date_picker_title">Select date</string>
</resources>