<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ivMissionImage"
                android:adjustViewBounds="true"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/mission_card" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#66000000" />

            <ImageView
                android:id="@+id/ivBookmark"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/ic_bookmark_off"
                android:contentDescription="@string/bookmark" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:orientation="vertical"
                android:paddingStart="16dp"
                android:paddingTop="32dp"
                android:paddingEnd="16dp"
                android:paddingBottom="32dp"
                app:layout_constraintBottom_toBottomOf="parent">

                <ImageView
                    android:id="@+id/ivLevel"
                    android:layout_width="68dp"
                    android:layout_height="32dp"
                    android:scaleType="fitStart"
                    tools:src="@drawable/ic_level_1"
                    android:contentDescription="@string/level" />

                <TextView
                    android:id="@+id/tvMissionTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:gravity="top"
                    android:lineSpacingExtra="2sp"
                    android:translationY="-0.87sp"
                    android:lines="2"
                    android:textSize="22dp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/pretendard_bold"
                    tools:text="춘천 닭갈비 먹으러 춘천가기"/>

                <TextView
                    android:id="@+id/tvMissionGuide"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:gravity="top"
                    android:lineSpacingExtra="5sp"
                    android:translationY="-2.45sp"
                    android:lines="2"
                    android:textColor="@color/white"
                    android:textSize="16dp"
                    android:fontFamily="@font/pretendard_medium"
                    app:layout_constraintBottom_toBottomOf="parent"
                    tools:text="동네에 있는 닭갈비집이 아닌, 진짜 춘천 닭갈비를 먹기 위해 춘천으로 떠나보세요"/>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</layout>